cmake_minimum_required(VERSION 3.12)
project(lowjs)

set(CMAKE_CXX_STANDARD 14)

include_directories(app)
include_directories(deps/c-ares)
include_directories(deps/c-ares/test)
include_directories(deps/c-ares/test/gmock-1.8.0/gmock)
include_directories(deps/c-ares/test/gmock-1.8.0/gtest)
include_directories(deps/duktape/examples/alloc-hybrid)
include_directories(deps/duktape/examples/alloc-logging)
include_directories(deps/duktape/examples/alloc-torture)
include_directories(deps/duktape/examples/cmdline)
include_directories(deps/duktape/examples/codepage-conv)
include_directories(deps/duktape/examples/debug-trans-dvalue)
include_directories(deps/duktape/examples/debug-trans-socket)
include_directories(deps/duktape/examples/eventloop)
include_directories(deps/duktape/extras/alloc-pool)
include_directories(deps/duktape/extras/cbor)
include_directories(deps/duktape/extras/console)
include_directories(deps/duktape/extras/duk-v1-compat)
include_directories(deps/duktape/extras/logging)
include_directories(deps/duktape/extras/minimal-printf)
include_directories(deps/duktape/extras/module-duktape)
include_directories(deps/duktape/extras/module-node)
include_directories(deps/duktape/extras/print-alert)
include_directories(deps/duktape/src-input)
include_directories(deps/duktape/util)
include_directories(deps/mbedtls/configs)
include_directories(deps/mbedtls/doxygen)
include_directories(deps/mbedtls/doxygen/input)
include_directories(deps/mbedtls/include)
include_directories(deps/mbedtls/include/mbedtls)
include_directories(examples/low_with_native_module)
include_directories(include)
include_directories(src)

add_executable(lowjs
        app/low_config.h
        app/main.c
        deps/c-ares/test/gmock-1.8.0/gmock/gmock.h
        deps/c-ares/test/gmock-1.8.0/gtest/gtest.h
        deps/c-ares/test/gmock-1.8.0/gmock-gtest-all.cc
        deps/c-ares/test/ares-fuzz.c
        deps/c-ares/test/ares-test-ai.h
        deps/c-ares/test/ares-test-fuzz-name.c
        deps/c-ares/test/ares-test-fuzz.c
        deps/c-ares/test/ares-test-init.cc
        deps/c-ares/test/ares-test-internal.cc
        deps/c-ares/test/ares-test-live-ai.cc
        deps/c-ares/test/ares-test-live.cc
        deps/c-ares/test/ares-test-main.cc
        deps/c-ares/test/ares-test-misc.cc
        deps/c-ares/test/ares-test-mock-ai.cc
        deps/c-ares/test/ares-test-mock.cc
        deps/c-ares/test/ares-test-ns.cc
        deps/c-ares/test/ares-test-parse-a.cc
        deps/c-ares/test/ares-test-parse-aaaa.cc
        deps/c-ares/test/ares-test-parse-mx.cc
        deps/c-ares/test/ares-test-parse-naptr.cc
        deps/c-ares/test/ares-test-parse-ns.cc
        deps/c-ares/test/ares-test-parse-ptr.cc
        deps/c-ares/test/ares-test-parse-soa.cc
        deps/c-ares/test/ares-test-parse-srv.cc
        deps/c-ares/test/ares-test-parse-txt.cc
        deps/c-ares/test/ares-test-parse.cc
        deps/c-ares/test/ares-test.cc
        deps/c-ares/test/ares-test.h
        deps/c-ares/test/dns-dump.cc
        deps/c-ares/test/dns-proto-test.cc
        deps/c-ares/test/dns-proto.cc
        deps/c-ares/test/dns-proto.h
        deps/c-ares/acountry.c
        deps/c-ares/adig.c
        deps/c-ares/ahost.c
        deps/c-ares/ares.h
        deps/c-ares/ares__close_sockets.c
        deps/c-ares/ares__get_hostent.c
        deps/c-ares/ares__read_line.c
        deps/c-ares/ares__timeval.c
        deps/c-ares/ares_android.c
        deps/c-ares/ares_android.h
        deps/c-ares/ares_cancel.c
        deps/c-ares/ares_create_query.c
        deps/c-ares/ares_data.c
        deps/c-ares/ares_data.h
        deps/c-ares/ares_destroy.c
        deps/c-ares/ares_dns.h
        deps/c-ares/ares_expand_name.c
        deps/c-ares/ares_expand_string.c
        deps/c-ares/ares_fds.c
        deps/c-ares/ares_free_hostent.c
        deps/c-ares/ares_free_string.c
        deps/c-ares/ares_getaddrinfo.c
        deps/c-ares/ares_getenv.c
        deps/c-ares/ares_getenv.h
        deps/c-ares/ares_gethostbyaddr.c
        deps/c-ares/ares_gethostbyname.c
        deps/c-ares/ares_getnameinfo.c
        deps/c-ares/ares_getopt.c
        deps/c-ares/ares_getopt.h
        deps/c-ares/ares_getsock.c
        deps/c-ares/ares_inet_net_pton.h
        deps/c-ares/ares_init.c
        deps/c-ares/ares_iphlpapi.h
        deps/c-ares/ares_ipv6.h
        deps/c-ares/ares_library_init.c
        deps/c-ares/ares_library_init.h
        deps/c-ares/ares_llist.c
        deps/c-ares/ares_llist.h
        deps/c-ares/ares_mkquery.c
        deps/c-ares/ares_nowarn.c
        deps/c-ares/ares_nowarn.h
        deps/c-ares/ares_options.c
        deps/c-ares/ares_parse_a_reply.c
        deps/c-ares/ares_parse_aaaa_reply.c
        deps/c-ares/ares_parse_mx_reply.c
        deps/c-ares/ares_parse_naptr_reply.c
        deps/c-ares/ares_parse_ns_reply.c
        deps/c-ares/ares_parse_ptr_reply.c
        deps/c-ares/ares_parse_soa_reply.c
        deps/c-ares/ares_parse_srv_reply.c
        deps/c-ares/ares_parse_txt_reply.c
        deps/c-ares/ares_platform.c
        deps/c-ares/ares_platform.h
        deps/c-ares/ares_private.h
        deps/c-ares/ares_process.c
        deps/c-ares/ares_query.c
        deps/c-ares/ares_rules.h
        deps/c-ares/ares_search.c
        deps/c-ares/ares_send.c
        deps/c-ares/ares_setup.h
        deps/c-ares/ares_strcasecmp.c
        deps/c-ares/ares_strcasecmp.h
        deps/c-ares/ares_strdup.c
        deps/c-ares/ares_strdup.h
        deps/c-ares/ares_strerror.c
        deps/c-ares/ares_strsplit.c
        deps/c-ares/ares_strsplit.h
        deps/c-ares/ares_timeout.c
        deps/c-ares/ares_version.c
        deps/c-ares/ares_version.h
        deps/c-ares/ares_writev.c
        deps/c-ares/ares_writev.h
        deps/c-ares/bitncmp.c
        deps/c-ares/bitncmp.h
        deps/c-ares/config-dos.h
        deps/c-ares/config-win32.h
        deps/c-ares/inet_net_pton.c
        deps/c-ares/inet_ntop.c
        deps/c-ares/nameser.h
        deps/c-ares/setup_once.h
        deps/c-ares/windows_port.c
        deps/duktape/dukweb/dukweb.c
        deps/duktape/examples/alloc-hybrid/duk_alloc_hybrid.c
        deps/duktape/examples/alloc-hybrid/duk_alloc_hybrid.h
        deps/duktape/examples/alloc-logging/duk_alloc_logging.c
        deps/duktape/examples/alloc-logging/duk_alloc_logging.h
        deps/duktape/examples/alloc-torture/duk_alloc_torture.c
        deps/duktape/examples/alloc-torture/duk_alloc_torture.h
        deps/duktape/examples/cmdline/duk_cmdline.c
        deps/duktape/examples/cmdline/duk_cmdline.h
        deps/duktape/examples/cmdline/duk_cmdline_lowmem.c
        deps/duktape/examples/codepage-conv/duk_codepage_conv.c
        deps/duktape/examples/codepage-conv/duk_codepage_conv.h
        deps/duktape/examples/codepage-conv/test.c
        deps/duktape/examples/cpp-exceptions/cpp_exceptions.cpp
        deps/duktape/examples/debug-trans-dvalue/duk_trans_dvalue.c
        deps/duktape/examples/debug-trans-dvalue/duk_trans_dvalue.h
        deps/duktape/examples/debug-trans-dvalue/test.c
        deps/duktape/examples/debug-trans-socket/duk_trans_socket.h
        deps/duktape/examples/debug-trans-socket/duk_trans_socket_unix.c
        deps/duktape/examples/debug-trans-socket/duk_trans_socket_windows.c
        deps/duktape/examples/dummy-date-provider/dummy_date_provider.c
        deps/duktape/examples/eval/eval.c
        deps/duktape/examples/eventloop/c_eventloop.c
        deps/duktape/examples/eventloop/c_eventloop.h
        deps/duktape/examples/eventloop/fileio.c
        deps/duktape/examples/eventloop/main.c
        deps/duktape/examples/eventloop/ncurses.c
        deps/duktape/examples/eventloop/poll.c
        deps/duktape/examples/eventloop/socket.c
        deps/duktape/examples/guide/primecheck.c
        deps/duktape/examples/guide/processlines.c
        deps/duktape/examples/guide/uppercase.c
        deps/duktape/examples/hello/hello.c
        deps/duktape/examples/hello/hello_ptrcomp.c
        deps/duktape/examples/jxpretty/jxpretty.c
        deps/duktape/examples/sandbox/sandbox.c
        deps/duktape/extras/alloc-pool/duk_alloc_pool.c
        deps/duktape/extras/alloc-pool/duk_alloc_pool.h
        deps/duktape/extras/alloc-pool/ptrcomp_fixup.h
        deps/duktape/extras/alloc-pool/test.c
        deps/duktape/extras/cbor/duk_cbor.c
        deps/duktape/extras/cbor/duk_cbor.h
        deps/duktape/extras/cbor/jsoncbor.c
        deps/duktape/extras/console/duk_console.c
        deps/duktape/extras/console/duk_console.h
        deps/duktape/extras/console/test.c
        deps/duktape/extras/duk-v1-compat/duk_v1_compat.c
        deps/duktape/extras/duk-v1-compat/duk_v1_compat.h
        deps/duktape/extras/duk-v1-compat/test.c
        deps/duktape/extras/logging/duk_logging.c
        deps/duktape/extras/logging/duk_logging.h
        deps/duktape/extras/logging/test.c
        deps/duktape/extras/minimal-printf/duk_minimal_printf.c
        deps/duktape/extras/minimal-printf/duk_minimal_printf.h
        deps/duktape/extras/minimal-printf/test.c
        deps/duktape/extras/module-duktape/duk_module_duktape.c
        deps/duktape/extras/module-duktape/duk_module_duktape.h
        deps/duktape/extras/module-duktape/test.c
        deps/duktape/extras/module-node/duk_module_node.c
        deps/duktape/extras/module-node/duk_module_node.h
        deps/duktape/extras/module-node/test.c
        deps/duktape/extras/print-alert/duk_print_alert.c
        deps/duktape/extras/print-alert/duk_print_alert.h
        deps/duktape/extras/print-alert/test.c
        deps/duktape/misc/arridx_unsigned.c
        deps/duktape/misc/c_hex_esc.c
        deps/duktape/misc/clang_aliasing.c
        deps/duktape/misc/clang_cast_align.c
        deps/duktape/misc/cxx_static_const.c
        deps/duktape/misc/float_cast.c
        deps/duktape/misc/literal_intern_test.c
        deps/duktape/misc/preproc_compare1.c
        deps/duktape/misc/preproc_compare2.c
        deps/duktape/misc/preproc_compare3.c
        deps/duktape/misc/preproc_compare4.c
        deps/duktape/misc/shift_warning.c
        deps/duktape/misc/splitmix64.c
        deps/duktape/misc/splitmix64_test.c
        deps/duktape/misc/tcc_zerosign1.c
        deps/duktape/misc/tcc_zerosign2.c
        deps/duktape/misc/test_mandel2.c
        deps/duktape/misc/testdefs.c
        deps/duktape/misc/union_initializer.c
        deps/duktape/misc/xoroshiro128plus.c
        deps/duktape/misc/xoroshiro128plus_test.c
        deps/duktape/runtests/api_testcase_main.c
        deps/duktape/src-input/duk_alloc_default.c
        deps/duktape/src-input/duk_api_buffer.c
        deps/duktape/src-input/duk_api_bytecode.c
        deps/duktape/src-input/duk_api_call.c
        deps/duktape/src-input/duk_api_codec.c
        deps/duktape/src-input/duk_api_compile.c
        deps/duktape/src-input/duk_api_debug.c
        deps/duktape/src-input/duk_api_heap.c
        deps/duktape/src-input/duk_api_inspect.c
        deps/duktape/src-input/duk_api_internal.h
        deps/duktape/src-input/duk_api_memory.c
        deps/duktape/src-input/duk_api_object.c
        deps/duktape/src-input/duk_api_random.c
        deps/duktape/src-input/duk_api_stack.c
        deps/duktape/src-input/duk_api_string.c
        deps/duktape/src-input/duk_api_time.c
        deps/duktape/src-input/duk_bi_array.c
        deps/duktape/src-input/duk_bi_boolean.c
        deps/duktape/src-input/duk_bi_buffer.c
        deps/duktape/src-input/duk_bi_date.c
        deps/duktape/src-input/duk_bi_date_unix.c
        deps/duktape/src-input/duk_bi_date_windows.c
        deps/duktape/src-input/duk_bi_duktape.c
        deps/duktape/src-input/duk_bi_encoding.c
        deps/duktape/src-input/duk_bi_error.c
        deps/duktape/src-input/duk_bi_function.c
        deps/duktape/src-input/duk_bi_global.c
        deps/duktape/src-input/duk_bi_json.c
        deps/duktape/src-input/duk_bi_math.c
        deps/duktape/src-input/duk_bi_number.c
        deps/duktape/src-input/duk_bi_object.c
        deps/duktape/src-input/duk_bi_performance.c
        deps/duktape/src-input/duk_bi_pointer.c
        deps/duktape/src-input/duk_bi_promise.c
        deps/duktape/src-input/duk_bi_protos.h
        deps/duktape/src-input/duk_bi_proxy.c
        deps/duktape/src-input/duk_bi_reflect.c
        deps/duktape/src-input/duk_bi_regexp.c
        deps/duktape/src-input/duk_bi_string.c
        deps/duktape/src-input/duk_bi_symbol.c
        deps/duktape/src-input/duk_bi_thread.c
        deps/duktape/src-input/duk_bi_thrower.c
        deps/duktape/src-input/duk_dblunion.h
        deps/duktape/src-input/duk_debug.h
        deps/duktape/src-input/duk_debug_fixedbuffer.c
        deps/duktape/src-input/duk_debug_macros.c
        deps/duktape/src-input/duk_debug_vsnprintf.c
        deps/duktape/src-input/duk_debugger.c
        deps/duktape/src-input/duk_debugger.h
        deps/duktape/src-input/duk_error.h
        deps/duktape/src-input/duk_error_augment.c
        deps/duktape/src-input/duk_error_longjmp.c
        deps/duktape/src-input/duk_error_macros.c
        deps/duktape/src-input/duk_error_misc.c
        deps/duktape/src-input/duk_error_throw.c
        deps/duktape/src-input/duk_exception.h
        deps/duktape/src-input/duk_forwdecl.h
        deps/duktape/src-input/duk_harray.h
        deps/duktape/src-input/duk_hboundfunc.h
        deps/duktape/src-input/duk_hbuffer.h
        deps/duktape/src-input/duk_hbuffer_alloc.c
        deps/duktape/src-input/duk_hbuffer_ops.c
        deps/duktape/src-input/duk_hbufobj.h
        deps/duktape/src-input/duk_hbufobj_misc.c
        deps/duktape/src-input/duk_hcompfunc.h
        deps/duktape/src-input/duk_heap.h
        deps/duktape/src-input/duk_heap_alloc.c
        deps/duktape/src-input/duk_heap_finalize.c
        deps/duktape/src-input/duk_heap_hashstring.c
        deps/duktape/src-input/duk_heap_markandsweep.c
        deps/duktape/src-input/duk_heap_memory.c
        deps/duktape/src-input/duk_heap_misc.c
        deps/duktape/src-input/duk_heap_refcount.c
        deps/duktape/src-input/duk_heap_stringcache.c
        deps/duktape/src-input/duk_heap_stringtable.c
        deps/duktape/src-input/duk_heaphdr.h
        deps/duktape/src-input/duk_henv.h
        deps/duktape/src-input/duk_hnatfunc.h
        deps/duktape/src-input/duk_hobject.h
        deps/duktape/src-input/duk_hobject_alloc.c
        deps/duktape/src-input/duk_hobject_class.c
        deps/duktape/src-input/duk_hobject_enum.c
        deps/duktape/src-input/duk_hobject_misc.c
        deps/duktape/src-input/duk_hobject_pc2line.c
        deps/duktape/src-input/duk_hobject_props.c
        deps/duktape/src-input/duk_hproxy.h
        deps/duktape/src-input/duk_hstring.h
        deps/duktape/src-input/duk_hstring_misc.c
        deps/duktape/src-input/duk_hthread.h
        deps/duktape/src-input/duk_hthread_alloc.c
        deps/duktape/src-input/duk_hthread_builtins.c
        deps/duktape/src-input/duk_hthread_misc.c
        deps/duktape/src-input/duk_hthread_stacks.c
        deps/duktape/src-input/duk_internal.h
        deps/duktape/src-input/duk_jmpbuf.h
        deps/duktape/src-input/duk_js.h
        deps/duktape/src-input/duk_js_arith.c
        deps/duktape/src-input/duk_js_bytecode.h
        deps/duktape/src-input/duk_js_call.c
        deps/duktape/src-input/duk_js_compiler.c
        deps/duktape/src-input/duk_js_compiler.h
        deps/duktape/src-input/duk_js_executor.c
        deps/duktape/src-input/duk_js_ops.c
        deps/duktape/src-input/duk_js_var.c
        deps/duktape/src-input/duk_json.h
        deps/duktape/src-input/duk_lexer.c
        deps/duktape/src-input/duk_lexer.h
        deps/duktape/src-input/duk_numconv.c
        deps/duktape/src-input/duk_numconv.h
        deps/duktape/src-input/duk_refcount.h
        deps/duktape/src-input/duk_regexp.h
        deps/duktape/src-input/duk_regexp_compiler.c
        deps/duktape/src-input/duk_regexp_executor.c
        deps/duktape/src-input/duk_replacements.c
        deps/duktape/src-input/duk_replacements.h
        deps/duktape/src-input/duk_selftest.c
        deps/duktape/src-input/duk_selftest.h
        deps/duktape/src-input/duk_strings.h
        deps/duktape/src-input/duk_tval.c
        deps/duktape/src-input/duk_tval.h
        deps/duktape/src-input/duk_unicode.h
        deps/duktape/src-input/duk_unicode_support.c
        deps/duktape/src-input/duk_unicode_tables.c
        deps/duktape/src-input/duk_util.h
        deps/duktape/src-input/duk_util_bitdecoder.c
        deps/duktape/src-input/duk_util_bitencoder.c
        deps/duktape/src-input/duk_util_bufwriter.c
        deps/duktape/src-input/duk_util_cast.c
        deps/duktape/src-input/duk_util_double.c
        deps/duktape/src-input/duk_util_hashbytes.c
        deps/duktape/src-input/duk_util_memory.c
        deps/duktape/src-input/duk_util_misc.c
        deps/duktape/src-input/duk_util_tinyrandom.c
        deps/duktape/tests/api/test-all-public-symbols.c
        deps/duktape/tests/api/test-base64.c
        deps/duktape/tests/api/test-buffer-to-string.c
        deps/duktape/tests/api/test-buffer-zeroed.c
        deps/duktape/tests/api/test-bufferobject-dynamic-safety.c
        deps/duktape/tests/api/test-bufferobject-example-1.c
        deps/duktape/tests/api/test-bufferobject-initial.c
        deps/duktape/tests/api/test-bug-bufferobject-arraybuffer-offset-length.c
        deps/duktape/tests/api/test-bug-is-constructor-call-empty-callstack.c
        deps/duktape/tests/api/test-bug-is-fixed-dynamic-buffer-nullptr.c
        deps/duktape/tests/api/test-bug-is-primitive-invalid-index-gh337.c
        deps/duktape/tests/api/test-bug-multithread-valgrind.c
        deps/duktape/tests/api/test-bug-object-binding-proxy.c
        deps/duktape/tests/api/test-bug-peval-pcompile-nofile.c
        deps/duktape/tests/api/test-bug-push-buffer-maxsize.c
        deps/duktape/tests/api/test-bug-push-buffer-semicolon.c
        deps/duktape/tests/api/test-bug-push-sprintf-va-copy.c
        deps/duktape/tests/api/test-bug-push-string-maxsize.c
        deps/duktape/tests/api/test-bug-refzero-rescue-queue.c
        deps/duktape/tests/api/test-bug-set-cfunc-name.c
        deps/duktape/tests/api/test-bug-set-top-wrap.c
        deps/duktape/tests/api/test-bug-tailcall-preventyield-assert.c
        deps/duktape/tests/api/test-c-constructor.c
        deps/duktape/tests/api/test-call-method.c
        deps/duktape/tests/api/test-call-prop.c
        deps/duktape/tests/api/test-call.c
        deps/duktape/tests/api/test-charcodeat.c
        deps/duktape/tests/api/test-check-require-stack-top.c
        deps/duktape/tests/api/test-check-require-stack.c
        deps/duktape/tests/api/test-check-type-mask.c
        deps/duktape/tests/api/test-check-type.c
        deps/duktape/tests/api/test-compact.c
        deps/duktape/tests/api/test-compile-file.c
        deps/duktape/tests/api/test-compile-filename.c
        deps/duktape/tests/api/test-compile-shebang.c
        deps/duktape/tests/api/test-compile-string.c
        deps/duktape/tests/api/test-compile.c
        deps/duktape/tests/api/test-concat.c
        deps/duktape/tests/api/test-copy.c
        deps/duktape/tests/api/test-debugger-notify.c
        deps/duktape/tests/api/test-decode-string.c
        deps/duktape/tests/api/test-def-prop-convenience.c
        deps/duktape/tests/api/test-def-prop-virtual.c
        deps/duktape/tests/api/test-def-prop.c
        deps/duktape/tests/api/test-del-prop.c
        deps/duktape/tests/api/test-dev-api-verbose-error-messages-gh441.c
        deps/duktape/tests/api/test-dev-cfunc-name.c
        deps/duktape/tests/api/test-dev-cmodule-guide.c
        deps/duktape/tests/api/test-dev-constructor-augment.c
        deps/duktape/tests/api/test-dev-error-fileline-blame-gh455.c
        deps/duktape/tests/api/test-dev-finalizer-rerun.c
        deps/duktape/tests/api/test-dev-finalizer-rescue-unwind.c
        deps/duktape/tests/api/test-dev-func-bind-name-notstring.c
        deps/duktape/tests/api/test-dev-func-tostring.c
        deps/duktape/tests/api/test-dev-getpropc-inherited-_value.c
        deps/duktape/tests/api/test-dev-global-object-proxy.c
        deps/duktape/tests/api/test-dev-internal-key-access.c
        deps/duktape/tests/api/test-dev-internal-property-basics.c
        deps/duktape/tests/api/test-dev-lightfunc-bound.c
        deps/duktape/tests/api/test-dev-lightfunc-toobject-varargs.c
        deps/duktape/tests/api/test-dev-lightfunc.c
        deps/duktape/tests/api/test-dev-override-duktapec-func-getters.c
        deps/duktape/tests/api/test-dev-plain-buffer.c
        deps/duktape/tests/api/test-dev-prototype-loop.c
        deps/duktape/tests/api/test-dev-return-types.c
        deps/duktape/tests/api/test-dev-rom-builtins-1.c
        deps/duktape/tests/api/test-dev-set-duktapec-func-length.c
        deps/duktape/tests/api/test-dev-set-duktapec-func-name.c
        deps/duktape/tests/api/test-dev-string-intern-side-effect.c
        deps/duktape/tests/api/test-dev-symbol-basic.c
        deps/duktape/tests/api/test-dev-valstack-checked-size-call.c
        deps/duktape/tests/api/test-dev-write-duktapec-func-length.c
        deps/duktape/tests/api/test-dev-write-duktapec-func-name.c
        deps/duktape/tests/api/test-dump-context.c
        deps/duktape/tests/api/test-dump-load-basic.c
        deps/duktape/tests/api/test-dump-load-bound.c
        deps/duktape/tests/api/test-dump-load-fastint.c
        deps/duktape/tests/api/test-dump-load-inner-func-length.c
        deps/duktape/tests/api/test-dup.c
        deps/duktape/tests/api/test-enum-gh1592.c
        deps/duktape/tests/api/test-enum.c
        deps/duktape/tests/api/test-equals-strict-equals.c
        deps/duktape/tests/api/test-errhandler.c
        deps/duktape/tests/api/test-error-convenience.c
        deps/duktape/tests/api/test-error.c
        deps/duktape/tests/api/test-eval-file.c
        deps/duktape/tests/api/test-eval-filename.c
        deps/duktape/tests/api/test-eval-strictness.c
        deps/duktape/tests/api/test-eval-string.c
        deps/duktape/tests/api/test-eval-this-binding.c
        deps/duktape/tests/api/test-eval.c
        deps/duktape/tests/api/test-external-buffer.c
        deps/duktape/tests/api/test-fatal-return.c
        deps/duktape/tests/api/test-fatal.c
        deps/duktape/tests/api/test-freeze.c
        deps/duktape/tests/api/test-frontpage.c
        deps/duktape/tests/api/test-gc.c
        deps/duktape/tests/api/test-get-boolean-default.c
        deps/duktape/tests/api/test-get-boolean.c
        deps/duktape/tests/api/test-get-buffer-data-default.c
        deps/duktape/tests/api/test-get-buffer-data.c
        deps/duktape/tests/api/test-get-buffer-default.c
        deps/duktape/tests/api/test-get-buffer.c
        deps/duktape/tests/api/test-get-c-function-default.c
        deps/duktape/tests/api/test-get-c-function.c
        deps/duktape/tests/api/test-get-context-default.c
        deps/duktape/tests/api/test-get-context.c
        deps/duktape/tests/api/test-get-error-code-is-error.c
        deps/duktape/tests/api/test-get-global-heapptr.c
        deps/duktape/tests/api/test-get-global-literal.c
        deps/duktape/tests/api/test-get-global-string.c
        deps/duktape/tests/api/test-get-heapptr-default.c
        deps/duktape/tests/api/test-get-int-default.c
        deps/duktape/tests/api/test-get-int.c
        deps/duktape/tests/api/test-get-length.c
        deps/duktape/tests/api/test-get-memory-functions.c
        deps/duktape/tests/api/test-get-now.c
        deps/duktape/tests/api/test-get-number-default.c
        deps/duktape/tests/api/test-get-number.c
        deps/duktape/tests/api/test-get-pointer-default.c
        deps/duktape/tests/api/test-get-pointer.c
        deps/duktape/tests/api/test-get-prop-desc.c
        deps/duktape/tests/api/test-get-prop.c
        deps/duktape/tests/api/test-get-require-push-heapptr.c
        deps/duktape/tests/api/test-get-require-top-index.c
        deps/duktape/tests/api/test-get-set-finalizer.c
        deps/duktape/tests/api/test-get-set-magic.c
        deps/duktape/tests/api/test-get-set-prototype.c
        deps/duktape/tests/api/test-get-set-top.c
        deps/duktape/tests/api/test-get-string-default.c
        deps/duktape/tests/api/test-get-string.c
        deps/duktape/tests/api/test-get-uint-default.c
        deps/duktape/tests/api/test-get-uint.c
        deps/duktape/tests/api/test-global-stash.c
        deps/duktape/tests/api/test-has-prop.c
        deps/duktape/tests/api/test-heap-lifecycle-basic.c
        deps/duktape/tests/api/test-heap-stash.c
        deps/duktape/tests/api/test-hello-world.c
        deps/duktape/tests/api/test-hex.c
        deps/duktape/tests/api/test-indirect-eval.c
        deps/duktape/tests/api/test-insert.c
        deps/duktape/tests/api/test-inspect-callstack-entry.c
        deps/duktape/tests/api/test-inspect-value.c
        deps/duktape/tests/api/test-instanceof-hasinstance.c
        deps/duktape/tests/api/test-instanceof-no-prototype.c
        deps/duktape/tests/api/test-instanceof.c
        deps/duktape/tests/api/test-is-buffer-data.c
        deps/duktape/tests/api/test-is-calls.c
        deps/duktape/tests/api/test-is-constructor-call.c
        deps/duktape/tests/api/test-is-strict.c
        deps/duktape/tests/api/test-is-symbol.c
        deps/duktape/tests/api/test-join.c
        deps/duktape/tests/api/test-json-fastpath.c
        deps/duktape/tests/api/test-json.c
        deps/duktape/tests/api/test-logging.c
        deps/duktape/tests/api/test-magic-modify-during-call.c
        deps/duktape/tests/api/test-map-string.c
        deps/duktape/tests/api/test-memory-funcs.c
        deps/duktape/tests/api/test-new.c
        deps/duktape/tests/api/test-normalize-index.c
        deps/duktape/tests/api/test-opt-boolean.c
        deps/duktape/tests/api/test-opt-buffer-data.c
        deps/duktape/tests/api/test-opt-buffer.c
        deps/duktape/tests/api/test-opt-c-function.c
        deps/duktape/tests/api/test-opt-context.c
        deps/duktape/tests/api/test-opt-heapptr.c
        deps/duktape/tests/api/test-opt-int.c
        deps/duktape/tests/api/test-opt-number.c
        deps/duktape/tests/api/test-opt-pointer.c
        deps/duktape/tests/api/test-opt-string.c
        deps/duktape/tests/api/test-opt-uint.c
        deps/duktape/tests/api/test-pcall-invalid-nargs.c
        deps/duktape/tests/api/test-pcall-method-invalid-nargs.c
        deps/duktape/tests/api/test-pcall-method-nargs.c
        deps/duktape/tests/api/test-pcall-method.c
        deps/duktape/tests/api/test-pcall-nargs.c
        deps/duktape/tests/api/test-pcall-prop-invalid-nargs.c
        deps/duktape/tests/api/test-pcall-prop-nargs.c
        deps/duktape/tests/api/test-pcall-prop-obj-is-key.c
        deps/duktape/tests/api/test-pcall-prop.c
        deps/duktape/tests/api/test-pcall.c
        deps/duktape/tests/api/test-pcompile-invalid-stack.c
        deps/duktape/tests/api/test-peval-invalid-stack.c
        deps/duktape/tests/api/test-pnew-invalid-nargs.c
        deps/duktape/tests/api/test-poppers.c
        deps/duktape/tests/api/test-print-replacement.c
        deps/duktape/tests/api/test-proxy-apply.c
        deps/duktape/tests/api/test-proxy-basic.c
        deps/duktape/tests/api/test-proxy-construct.c
        deps/duktape/tests/api/test-push-array.c
        deps/duktape/tests/api/test-push-arraybuffer.c
        deps/duktape/tests/api/test-push-bare-object.c
        deps/duktape/tests/api/test-push-buffer-object-disabled.c
        deps/duktape/tests/api/test-push-buffer-object.c
        deps/duktape/tests/api/test-push-buffer.c
        deps/duktape/tests/api/test-push-cfunc.c
        deps/duktape/tests/api/test-push-current-function.c
        deps/duktape/tests/api/test-push-current-thread.c
        deps/duktape/tests/api/test-push-error-object.c
        deps/duktape/tests/api/test-push-global.c
        deps/duktape/tests/api/test-push-heapptr-finalize-list.c
        deps/duktape/tests/api/test-push-literal.c
        deps/duktape/tests/api/test-push-new-target.c
        deps/duktape/tests/api/test-push-object.c
        deps/duktape/tests/api/test-push-proxy.c
        deps/duktape/tests/api/test-push-sprintf.c
        deps/duktape/tests/api/test-push-this.c
        deps/duktape/tests/api/test-push-thread.c
        deps/duktape/tests/api/test-push-vsprintf.c
        deps/duktape/tests/api/test-pushers.c
        deps/duktape/tests/api/test-put-func-num-list.c
        deps/duktape/tests/api/test-put-global-heapptr.c
        deps/duktape/tests/api/test-put-global-literal.c
        deps/duktape/tests/api/test-put-global-string.c
        deps/duktape/tests/api/test-put-prop-primbase.c
        deps/duktape/tests/api/test-put-prop-target-value-same.c
        deps/duktape/tests/api/test-put-prop.c
        deps/duktape/tests/api/test-random.c
        deps/duktape/tests/api/test-regexp-nonbmp-charclass.c
        deps/duktape/tests/api/test-remove.c
        deps/duktape/tests/api/test-replace.c
        deps/duktape/tests/api/test-require-boolean.c
        deps/duktape/tests/api/test-require-buffer-data.c
        deps/duktape/tests/api/test-require-buffer.c
        deps/duktape/tests/api/test-require-c-function.c
        deps/duktape/tests/api/test-require-context.c
        deps/duktape/tests/api/test-require-int.c
        deps/duktape/tests/api/test-require-lstring.c
        deps/duktape/tests/api/test-require-null.c
        deps/duktape/tests/api/test-require-number.c
        deps/duktape/tests/api/test-require-object.c
        deps/duktape/tests/api/test-require-pointer.c
        deps/duktape/tests/api/test-require-string.c
        deps/duktape/tests/api/test-require-undefined.c
        deps/duktape/tests/api/test-resize-buffer.c
        deps/duktape/tests/api/test-safe-call-invalid-nargs.c
        deps/duktape/tests/api/test-safe-call-invalid-nrets.c
        deps/duktape/tests/api/test-safe-call-reserve.c
        deps/duktape/tests/api/test-safe-call-retbase-padding.c
        deps/duktape/tests/api/test-safe-call.c
        deps/duktape/tests/api/test-safe-to-string.c
        deps/duktape/tests/api/test-samevalue.c
        deps/duktape/tests/api/test-seal.c
        deps/duktape/tests/api/test-set-global-object.c
        deps/duktape/tests/api/test-set-length.c
        deps/duktape/tests/api/test-steal-buffer.c
        deps/duktape/tests/api/test-substring.c
        deps/duktape/tests/api/test-suspend-resume-pthread.c
        deps/duktape/tests/api/test-suspend-resume.c
        deps/duktape/tests/api/test-swap.c
        deps/duktape/tests/api/test-symbol-getownpropertysymbols.c
        deps/duktape/tests/api/test-symbol-macros.c
        deps/duktape/tests/api/test-thread-stash.c
        deps/duktape/tests/api/test-throw.c
        deps/duktape/tests/api/test-time-components.c
        deps/duktape/tests/api/test-to-boolean.c
        deps/duktape/tests/api/test-to-buffer.c
        deps/duktape/tests/api/test-to-fixed-dynamic-buffer.c
        deps/duktape/tests/api/test-to-int-uint.c
        deps/duktape/tests/api/test-to-int32-uint32-uint16.c
        deps/duktape/tests/api/test-to-lstring.c
        deps/duktape/tests/api/test-to-null.c
        deps/duktape/tests/api/test-to-number.c
        deps/duktape/tests/api/test-to-object.c
        deps/duktape/tests/api/test-to-pointer.c
        deps/duktape/tests/api/test-to-primitive.c
        deps/duktape/tests/api/test-to-string.c
        deps/duktape/tests/api/test-to-undefined.c
        deps/duktape/tests/api/test-trim.c
        deps/duktape/tests/api/test-typedarray-set-overlap.c
        deps/duktape/tests/api/test-types.c
        deps/duktape/tests/api/test-validate-index.c
        deps/duktape/tests/api/test-xcopy-xmove.c
        deps/duktape/tests/emscripten/fizzbuzz.c
        deps/duktape/tests/emscripten/fmod.c
        deps/duktape/tests/emscripten/helloworld.c
        deps/duktape/tests/emscripten/mandelbrot.c
        deps/duktape/util/check_align.c
        deps/duktape/util/dukweb_fixup.h
        deps/duktape/util/makeduk_duklow_fixup.h
        deps/mbedtls/configs/config-ccm-psk-tls1_2.h
        deps/mbedtls/configs/config-mini-tls1_1.h
        deps/mbedtls/configs/config-no-entropy.h
        deps/mbedtls/configs/config-suite-b.h
        deps/mbedtls/configs/config-thread.h
        deps/mbedtls/doxygen/input/doc_encdec.h
        deps/mbedtls/doxygen/input/doc_hashing.h
        deps/mbedtls/doxygen/input/doc_mainpage.h
        deps/mbedtls/doxygen/input/doc_rng.h
        deps/mbedtls/doxygen/input/doc_ssltls.h
        deps/mbedtls/doxygen/input/doc_tcpip.h
        deps/mbedtls/doxygen/input/doc_x509.h
        deps/mbedtls/include/mbedtls/aes.h
        deps/mbedtls/include/mbedtls/aesni.h
        deps/mbedtls/include/mbedtls/arc4.h
        deps/mbedtls/include/mbedtls/aria.h
        deps/mbedtls/include/mbedtls/asn1.h
        deps/mbedtls/include/mbedtls/asn1write.h
        deps/mbedtls/include/mbedtls/base64.h
        deps/mbedtls/include/mbedtls/bignum.h
        deps/mbedtls/include/mbedtls/blowfish.h
        deps/mbedtls/include/mbedtls/bn_mul.h
        deps/mbedtls/include/mbedtls/camellia.h
        deps/mbedtls/include/mbedtls/ccm.h
        deps/mbedtls/include/mbedtls/certs.h
        deps/mbedtls/include/mbedtls/chacha20.h
        deps/mbedtls/include/mbedtls/chachapoly.h
        deps/mbedtls/include/mbedtls/check_config.h
        deps/mbedtls/include/mbedtls/cipher.h
        deps/mbedtls/include/mbedtls/cipher_internal.h
        deps/mbedtls/include/mbedtls/cmac.h
        deps/mbedtls/include/mbedtls/compat-1.3.h
        deps/mbedtls/include/mbedtls/config.h
        deps/mbedtls/include/mbedtls/ctr_drbg.h
        deps/mbedtls/include/mbedtls/debug.h
        deps/mbedtls/include/mbedtls/des.h
        deps/mbedtls/include/mbedtls/dhm.h
        deps/mbedtls/include/mbedtls/ecdh.h
        deps/mbedtls/include/mbedtls/ecdsa.h
        deps/mbedtls/include/mbedtls/ecjpake.h
        deps/mbedtls/include/mbedtls/ecp.h
        deps/mbedtls/include/mbedtls/ecp_internal.h
        deps/mbedtls/include/mbedtls/entropy.h
        deps/mbedtls/include/mbedtls/entropy_poll.h
        deps/mbedtls/include/mbedtls/error.h
        deps/mbedtls/include/mbedtls/gcm.h
        deps/mbedtls/include/mbedtls/havege.h
        deps/mbedtls/include/mbedtls/hkdf.h
        deps/mbedtls/include/mbedtls/hmac_drbg.h
        deps/mbedtls/include/mbedtls/md.h
        deps/mbedtls/include/mbedtls/md2.h
        deps/mbedtls/include/mbedtls/md4.h
        deps/mbedtls/include/mbedtls/md5.h
        deps/mbedtls/include/mbedtls/md_internal.h
        deps/mbedtls/include/mbedtls/memory_buffer_alloc.h
        deps/mbedtls/include/mbedtls/net.h
        deps/mbedtls/include/mbedtls/net_sockets.h
        deps/mbedtls/include/mbedtls/nist_kw.h
        deps/mbedtls/include/mbedtls/oid.h
        deps/mbedtls/include/mbedtls/padlock.h
        deps/mbedtls/include/mbedtls/pem.h
        deps/mbedtls/include/mbedtls/pk.h
        deps/mbedtls/include/mbedtls/pk_internal.h
        deps/mbedtls/include/mbedtls/pkcs11.h
        deps/mbedtls/include/mbedtls/pkcs12.h
        deps/mbedtls/include/mbedtls/pkcs5.h
        deps/mbedtls/include/mbedtls/platform.h
        deps/mbedtls/include/mbedtls/platform_time.h
        deps/mbedtls/include/mbedtls/platform_util.h
        deps/mbedtls/include/mbedtls/poly1305.h
        deps/mbedtls/include/mbedtls/ripemd160.h
        deps/mbedtls/include/mbedtls/rsa.h
        deps/mbedtls/include/mbedtls/rsa_internal.h
        deps/mbedtls/include/mbedtls/sha1.h
        deps/mbedtls/include/mbedtls/sha256.h
        deps/mbedtls/include/mbedtls/sha512.h
        deps/mbedtls/include/mbedtls/ssl.h
        deps/mbedtls/include/mbedtls/ssl_cache.h
        deps/mbedtls/include/mbedtls/ssl_ciphersuites.h
        deps/mbedtls/include/mbedtls/ssl_cookie.h
        deps/mbedtls/include/mbedtls/ssl_internal.h
        deps/mbedtls/include/mbedtls/ssl_ticket.h
        deps/mbedtls/include/mbedtls/threading.h
        deps/mbedtls/include/mbedtls/timing.h
        deps/mbedtls/include/mbedtls/version.h
        deps/mbedtls/include/mbedtls/x509.h
        deps/mbedtls/include/mbedtls/x509_crl.h
        deps/mbedtls/include/mbedtls/x509_crt.h
        deps/mbedtls/include/mbedtls/x509_csr.h
        deps/mbedtls/include/mbedtls/xtea.h
        deps/mbedtls/library/aes.c
        deps/mbedtls/library/aesni.c
        deps/mbedtls/library/arc4.c
        deps/mbedtls/library/aria.c
        deps/mbedtls/library/asn1parse.c
        deps/mbedtls/library/asn1write.c
        deps/mbedtls/library/base64.c
        deps/mbedtls/library/bignum.c
        deps/mbedtls/library/blowfish.c
        deps/mbedtls/library/camellia.c
        deps/mbedtls/library/ccm.c
        deps/mbedtls/library/certs.c
        deps/mbedtls/library/chacha20.c
        deps/mbedtls/library/chachapoly.c
        deps/mbedtls/library/cipher.c
        deps/mbedtls/library/cipher_wrap.c
        deps/mbedtls/library/cmac.c
        deps/mbedtls/library/ctr_drbg.c
        deps/mbedtls/library/debug.c
        deps/mbedtls/library/des.c
        deps/mbedtls/library/dhm.c
        deps/mbedtls/library/ecdh.c
        deps/mbedtls/library/ecdsa.c
        deps/mbedtls/library/ecjpake.c
        deps/mbedtls/library/ecp.c
        deps/mbedtls/library/ecp_curves.c
        deps/mbedtls/library/entropy.c
        deps/mbedtls/library/entropy_poll.c
        deps/mbedtls/library/error.c
        deps/mbedtls/library/gcm.c
        deps/mbedtls/library/havege.c
        deps/mbedtls/library/hkdf.c
        deps/mbedtls/library/hmac_drbg.c
        deps/mbedtls/library/md.c
        deps/mbedtls/library/md2.c
        deps/mbedtls/library/md4.c
        deps/mbedtls/library/md5.c
        deps/mbedtls/library/md_wrap.c
        deps/mbedtls/library/memory_buffer_alloc.c
        deps/mbedtls/library/net_sockets.c
        deps/mbedtls/library/nist_kw.c
        deps/mbedtls/library/oid.c
        deps/mbedtls/library/padlock.c
        deps/mbedtls/library/pem.c
        deps/mbedtls/library/pk.c
        deps/mbedtls/library/pk_wrap.c
        deps/mbedtls/library/pkcs11.c
        deps/mbedtls/library/pkcs12.c
        deps/mbedtls/library/pkcs5.c
        deps/mbedtls/library/pkparse.c
        deps/mbedtls/library/pkwrite.c
        deps/mbedtls/library/platform.c
        deps/mbedtls/library/platform_util.c
        deps/mbedtls/library/poly1305.c
        deps/mbedtls/library/ripemd160.c
        deps/mbedtls/library/rsa.c
        deps/mbedtls/library/rsa_internal.c
        deps/mbedtls/library/sha1.c
        deps/mbedtls/library/sha256.c
        deps/mbedtls/library/sha512.c
        deps/mbedtls/library/ssl_cache.c
        deps/mbedtls/library/ssl_ciphersuites.c
        deps/mbedtls/library/ssl_cli.c
        deps/mbedtls/library/ssl_cookie.c
        deps/mbedtls/library/ssl_srv.c
        deps/mbedtls/library/ssl_ticket.c
        deps/mbedtls/library/ssl_tls.c
        deps/mbedtls/library/threading.c
        deps/mbedtls/library/timing.c
        deps/mbedtls/library/version.c
        deps/mbedtls/library/version_features.c
        deps/mbedtls/library/x509.c
        deps/mbedtls/library/x509_create.c
        deps/mbedtls/library/x509_crl.c
        deps/mbedtls/library/x509_crt.c
        deps/mbedtls/library/x509_csr.c
        deps/mbedtls/library/x509write_crt.c
        deps/mbedtls/library/x509write_csr.c
        deps/mbedtls/library/xtea.c
        deps/mbedtls/programs/aes/aescrypt2.c
        deps/mbedtls/programs/aes/crypt_and_hash.c
        deps/mbedtls/programs/hash/generic_sum.c
        deps/mbedtls/programs/hash/hello.c
        deps/mbedtls/programs/pkey/dh_client.c
        deps/mbedtls/programs/pkey/dh_genprime.c
        deps/mbedtls/programs/pkey/dh_server.c
        deps/mbedtls/programs/pkey/ecdh_curve25519.c
        deps/mbedtls/programs/pkey/ecdsa.c
        deps/mbedtls/programs/pkey/gen_key.c
        deps/mbedtls/programs/pkey/key_app.c
        deps/mbedtls/programs/pkey/key_app_writer.c
        deps/mbedtls/programs/pkey/mpi_demo.c
        deps/mbedtls/programs/pkey/pk_decrypt.c
        deps/mbedtls/programs/pkey/pk_encrypt.c
        deps/mbedtls/programs/pkey/pk_sign.c
        deps/mbedtls/programs/pkey/pk_verify.c
        deps/mbedtls/programs/pkey/rsa_decrypt.c
        deps/mbedtls/programs/pkey/rsa_encrypt.c
        deps/mbedtls/programs/pkey/rsa_genkey.c
        deps/mbedtls/programs/pkey/rsa_sign.c
        deps/mbedtls/programs/pkey/rsa_sign_pss.c
        deps/mbedtls/programs/pkey/rsa_verify.c
        deps/mbedtls/programs/pkey/rsa_verify_pss.c
        deps/mbedtls/programs/random/gen_entropy.c
        deps/mbedtls/programs/random/gen_random_ctr_drbg.c
        deps/mbedtls/programs/random/gen_random_havege.c
        deps/mbedtls/programs/ssl/dtls_client.c
        deps/mbedtls/programs/ssl/dtls_server.c
        deps/mbedtls/programs/ssl/mini_client.c
        deps/mbedtls/programs/ssl/ssl_client1.c
        deps/mbedtls/programs/ssl/ssl_client2.c
        deps/mbedtls/programs/ssl/ssl_fork_server.c
        deps/mbedtls/programs/ssl/ssl_mail_client.c
        deps/mbedtls/programs/ssl/ssl_pthread_server.c
        deps/mbedtls/programs/ssl/ssl_server.c
        deps/mbedtls/programs/ssl/ssl_server2.c
        deps/mbedtls/programs/test/benchmark.c
        deps/mbedtls/programs/test/cpp_dummy_build.cpp
        deps/mbedtls/programs/test/selftest.c
        deps/mbedtls/programs/test/ssl_cert_test.c
        deps/mbedtls/programs/test/udp_proxy.c
        deps/mbedtls/programs/test/zeroize.c
        deps/mbedtls/programs/util/pem2der.c
        deps/mbedtls/programs/util/strerror.c
        deps/mbedtls/programs/x509/cert_app.c
        deps/mbedtls/programs/x509/cert_req.c
        deps/mbedtls/programs/x509/cert_write.c
        deps/mbedtls/programs/x509/crl_app.c
        deps/mbedtls/programs/x509/req_app.c
        deps/mbedtls/programs/wince_main.c
        examples/low_with_native_module/main.c
        examples/low_with_native_module/native_adder.c
        examples/low_with_native_module/native_adder.h
        include/low.h
        src/low_alloc.cpp
        src/low_alloc.h
        src/low_crypto.cpp
        src/low_crypto.h
        src/low_data_thread.cpp
        src/low_data_thread.h
        src/low_dns.cpp
        src/low_dns.h
        src/low_fs.cpp
        src/low_fs.h
        src/low_fs_misc.cpp
        src/low_fs_misc.h
        src/low_http.cpp
        src/low_http.h
        src/low_loop.cpp
        src/low_loop.h
        src/low_main.cpp
        src/low_main.h
        src/low_module.cpp
        src/low_module.h
        src/low_native.cpp
        src/low_native_aux.cpp
        src/low_native_aux.h
        src/low_net.cpp
        src/low_net.h
        src/low_process.cpp
        src/low_process.h
        src/low_system.cpp
        src/low_system.h
        src/low_tls.cpp
        src/low_tls.h
        src/low_web_thread.cpp
        src/low_web_thread.h
        src/LowCryptoHash.cpp
        src/LowCryptoHash.h
        src/LowDataCallback.h
        src/LowDNSResolver.cpp
        src/LowDNSResolver.h
        src/LowDNSWorker.cpp
        src/LowDNSWorker.h
        src/LowFD.h
        src/LowFile.cpp
        src/LowFile.h
        src/LowFSMisc.cpp
        src/LowFSMisc.h
        src/LowHTTPDirect.cpp
        src/LowHTTPDirect.h
        src/LowLoopCallback.h
        src/LowServerSocket.cpp
        src/LowServerSocket.h
        src/LowSignalHandler.cpp
        src/LowSignalHandler.h
        src/LowSocket.cpp
        src/LowSocket.h
        src/LowSocketDirect.h
        src/LowTLSContext.cpp
        src/LowTLSContext.h
        test/bugs/duk_crash_TR20180627.c
        test/bugs/duk_crash_TR20180706.c
        util/dukc.c)
